[package]
name = "rustls-config-stream"
version = "0.2.0"
edition = "2024"
authors = ["Dwayne Sykes <dwayne@sykes.pw>"]
license = "Apache-2.0 WITH LLVM-exception"
description = "Async stream backed Rustls ServerConfig and ClientConfig providers for cert/root hot-reload"
repository = "https://github.com/dsykes16/rustls-config-stream"

[features]
default = ["tracing"]
tracing = ["dep:tracing"]

[dependencies]
arc-swap = "1.7.1"
rustls = { version = "0.23.31", default-features = false, features = ["std"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", default-features = false, features = [
	"rt",
	"time",
] }
tokio-stream = { version = "0.1.17", default-features = false }
tracing = { version = "0.1.41", default-features = false, optional = true }

[dev-dependencies]
rustls = { version = "0.23.31", features = ["aws-lc-rs"] }
tokio = { version = "1.47.1", features = [
	"full",
	"rt-multi-thread",
	"test-util",
] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "forbid"
